--- a/css/component.css
+++ b/css/component.css
@@ -4,12 +4,12 @@
 	left: 0;
 	width: 100%;
 	background: #f6f6f6;
-	z-index: 10000;
+	z-index: 1000;
 	height: 230px;
 	overflow: hidden;
-	-webkit-transition: height 0.3s;
-	-moz-transition: height 0.3s;
-	transition: height 0.3s;
+	-webkit-transition: height 0.2s;
+	-moz-transition: height 0.2s;
+	transition: height 0.2s;
 }
 
 .cbp-af-header .cbp-af-inner {
@@ -33,7 +33,7 @@
 
 .cbp-af-header h1 {
 	text-transform: uppercase;
-	color: #333;
+	color: #f77e5e;
 	letter-spacing: 4px;
 	font-size: 4em;
 	margin: 0;
@@ -48,11 +48,11 @@
 	color: #aaa;
 	font-weight: 700;
 	margin: 0 0 0 20px;
-	font-size: 1.4em;
+	font-size: 3em;
 }
 
 .cbp-af-header nav a:hover {
-	color: #333;
+	color: #f77e5e;
 }
 
 /* Transitions and class for reduced height */
@@ -78,7 +78,7 @@
 
 /* Example Media Queries */
 @media screen and (max-width: 55em) {
-	
+
 	.cbp-af-header .cbp-af-inner {
 		width: 100%;
 	}
@@ -116,13 +116,13 @@
 
 @media screen and (max-width: 32.25em) {
 	.cbp-af-header nav a {
-		font-size: 1em;
+		font-size: 0.5em;
 	}
 }
 
 @media screen and (max-width: 24em) {
 	.cbp-af-header nav a,
-	.cbp-af-header.cbp-af-header-shrink nav a {
+	.menu-shrink nav a {
 		line-height: 1;
 	}
 }
