--- a/css/default.css
+++ b/css/default.css
@@ -19,17 +19,17 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #47a3da;
+    font-family: futura;
+    color: #black;
 }
 
 a {
-	color: #f0f0f0;
+	color: #d2d2d2;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #000;
+	color: #f77e5e;
 }
 
 .container {
@@ -60,7 +60,7 @@ a:hover {
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.5em;
-	padding: 0 0 0.6em 0.1em;
+	padding: 0 0 1.6em 0.1em;
 }
 
 .container > header > span span:after {
